# python-on-vercel-experiments

./: .gitignore  README.md
examples/01-simple-api/: requirements.txt
examples/01-simple-api/api/: index.py  users.py
examples/02-fastapi-basic/: pyproject.toml
examples/02-fastapi-basic/api/: index.py
examples/03-flask-basic/: Pipfile
examples/03-flask-basic/api/: index.py
examples/04-fastapi-advanced/: .env.example  pyproject.toml
examples/04-fastapi-advanced/app/: __init__.py  config.py  dependencies.py  main.py  middleware.py  models.py
examples/04-fastapi-advanced/app/routers/: products.py  users.py
examples/05-database-postgresql/: .env.example  .gitignore  alembic.ini  docker-compose.yml  requirements.txt
examples/05-database-postgresql/alembic/: env.py
examples/06-sse-chat/: package.json  pyproject.toml
examples/06-sse-chat/api/: index.py
examples/07-native-libraries/: requirements.txt
examples/08-django-basic/: requirements.txt  vercel.json
examples/09-sanic-basic/: requirements.txt
examples/10-blacksheep-basic/: requirements.txt
examples/11-tetris/: .env.example  .gitignore  alembic.ini  docker-compose.yml  package.json  pyproject.toml
examples/11-tetris/api/: index.py
examples/11-tetris/api/src/: app.py  auth.py  database.py  models.py  routes.py  schemas.py  service.py  settings.py
examples/11-tetris/api/src/migrations/: env.py
examples/11-tetris/api/src/migrations/versions/: e3367866d9f2_initial_migration_high_scores_table.py
examples/11-tetris/app/: layout.tsx  page.tsx
examples/11-tetris/app/components/: Board.tsx  GameInfo.tsx  GameOverModal.tsx  HighScores.tsx  TetrisGame.tsx  UserButton.tsx
examples/11-tetris/app/types/: tetris.ts
(+15 files in other folders)
