[project]
name = "fastapi-vercel-example"
version = "1.0.0"
description = "FastAPI basic example on Vercel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn>=0.24.0,<0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
