[project]
name = "fastapi-advanced-vercel"
version = "1.0.0"
description = "Production-ready FastAPI application on Vercel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn>=0.24.0,<0.25.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]
